Add DNS config, HTTPS proxy support, and macOS setup docs
- Configure dns_nameservers 8.8.8.8 in squid.conf
- Add ACLs for CONNECT method and SSL/safe ports to fix HTTPS proxying
- Add macOS Wi-Fi proxy setup instructions to README

--- a/squid.conf
+++ b/squid.conf
@@ -1,5 +1,22 @@
+# DNS
+dns_nameservers 8.8.8.8
+
 # Squid listening port
 http_port 3128
+
+# ACLs for safe ports and SSL
+acl SSL_ports port 443
+acl Safe_ports port 80        # http
+acl Safe_ports port 443       # https
+acl Safe_ports port 21        # ftp
+acl Safe_ports port 1025-65535 # unregistered ports
+acl CONNECT method CONNECT
+
+# Deny requests to unsafe ports
+http_access deny !Safe_ports
+
+# Deny CONNECT to non-SSL ports
+http_access deny CONNECT !SSL_ports
 
 # Allow all sources (for testing only)
 http_access allow all
