--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "3128:3128"
     volumes:
       - ./squid.conf:/etc/squid/squid.conf
-      # - ./cache:/var/spool/squid # Uncomment if you want to persist cache data
+      - ./cache:/var/spool/squid
       # - ./logs:/var/log/squid # Uncomment if you want to persist log data
     restart: unless-stopped
     logging:
