--- a/squid.conf
+++ b/squid.conf
@@ -18,5 +18,9 @@ http_access deny !Safe_ports
 # Deny CONNECT to non-SSL ports
 http_access deny CONNECT !SSL_ports
 
+# Cache settings
+cache_dir ufs /var/spool/squid 10000 16 256
+maximum_object_size 1 GB
+
 # Allow all sources (for testing only)
 http_access allow all
