--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       - "3128:3128"
     volumes:
       - ./squid.conf:/etc/squid/squid.conf
-      # - ./cache:/var/spool/squid # Uncomment if you want to persist log data
-      - ./logs:/var/log/squid
+      # - ./cache:/var/spool/squid # Uncomment if you want to persist cache data
+      # - ./logs:/var/log/squid # Uncomment if you want to persist log data
     restart: unless-stopped
     logging:
       driver: "json-file"
